fix: flickering

--- a/src/components/sbb-breadcrumb-group/sbb-breadcrumb-group.scss
+++ b/src/components/sbb-breadcrumb-group/sbb-breadcrumb-group.scss
@@ -5,21 +5,27 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-breadcrumb-wrap: nowrap;
-  --sbb-breadcrumb-padding-block: var(--sbb-spacing-fixed-4x);
+  --sbb-breadcrumb-group-wrap: nowrap;
+  --sbb-breadcrumb-group-padding-block: var(--sbb-spacing-fixed-4x);
+  --sbb-breadcrumb-group-visibility: hidden;
+}
+
+:host([data-loaded]) {
+  --sbb-breadcrumb-group-visibility: visible;
 }
 
 :host([data-state]) {
-  --sbb-breadcrumb-wrap: wrap;
+  --sbb-breadcrumb-group-wrap: wrap;
 }
 
 .sbb-breadcrumb-group {
   @include sbb.list-reset;
 
   display: flex;
-  flex-wrap: var(--sbb-breadcrumb-wrap);
+  flex-wrap: var(--sbb-breadcrumb-group-wrap);
   column-gap: var(--sbb-spacing-fixed-1x);
-  padding-block: var(--sbb-breadcrumb-padding-block);
+  padding-block: var(--sbb-breadcrumb-group-padding-block);
+  visibility: var(--sbb-breadcrumb-group-visibility);
 }
 
 .sbb-breadcrumb-group__item {
